--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,9 @@ configurations {
 }
 
 repositories {
-	mavenCentral()
+	mavenCentral().content {
+		excludeModule("javax.media", "jai_core")
+	}
 }
 
 dependencies {
@@ -26,6 +28,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	// https://mvnrepository.com/artifact/com.google.code.gson/gson
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
+
+	// https://mvnrepository.com/artifact/org.locationtech.proj4j/proj4j
+	implementation group: 'org.locationtech.proj4j', name: 'proj4j', version: '1.1.1'
+
 
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
