--- a/build.gradle
+++ b/build.gradle
@@ -17,26 +17,26 @@ configurations {
 	}
 }
 
-repositories {
-	mavenCentral().content {
-		excludeModule("javax.media", "jai_core")
+
+	repositories {
+		mavenCentral().content {
+			excludeModule("javax.media", "jai_core")
+		}
 	}
-}
+subprojects {
 
-dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	// https://mvnrepository.com/artifact/com.google.code.gson/gson
-	implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
+	dependencies {
+		implementation 'org.springframework.boot:spring-boot-starter-web'
+		testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-	// https://mvnrepository.com/artifact/org.locationtech.proj4j/proj4j
-	implementation group: 'org.locationtech.proj4j', name: 'proj4j', version: '1.1.1'
+		// lombok
+		compileOnly 'org.projectlombok:lombok'
+		annotationProcessor 'org.projectlombok:lombok'
 
-
-	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
-	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+		// DB
+		runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	}
 }
 
 tasks.named('bootBuildImage') {
