--- a/jjeob-core/build.gradle
+++ b/jjeob-core/build.gradle
@@ -13,9 +13,9 @@ jar {
     enabled = true
 }
 
-//bootJar {
-//    enabled = false
-//}
+bootJar {
+    enabled = false
+}
 
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
