--- a/build.gradle
+++ b/build.gradle
@@ -17,17 +17,24 @@ configurations {
 	}
 }
 
+repositories {
+	mavenCentral()
+}
+
+subprojects {
+	apply plugin: 'java'
+	apply plugin: 'org.springframework.boot'
+	apply plugin: 'io.spring.dependency-management'
 
 	repositories {
-		mavenCentral().content {
-			excludeModule("javax.media", "jai_core")
-		}
+		mavenCentral()
 	}
-subprojects {
 
 	dependencies {
+		// spring
 		implementation 'org.springframework.boot:spring-boot-starter-web'
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+		implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 		// lombok
 		compileOnly 'org.projectlombok:lombok'
