--- a/jjeob-api/build.gradle
+++ b/jjeob-api/build.gradle
@@ -7,17 +7,13 @@ plugins {
 group = 'com.fmap'
 version = '0.0.1-SNAPSHOT'
 
-repositories {
-    mavenCentral()
-}
-
 jar {
     enabled = false
 }
 
 dependencies {
-
     implementation project(path: ':jjeob-core')
+    implementation project(path: ':jjeob-batch')
 
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
