--- a/jjeob-batch/build.gradle
+++ b/jjeob-batch/build.gradle
@@ -14,6 +14,8 @@ dependencies {
     // https://mvnrepository.com/artifact/org.locationtech.proj4j/proj4j
     implementation group: 'org.locationtech.proj4j', name: 'proj4j', version: '1.1.1'
 
+    implementation 'org.springframework.boot:spring-boot-starter-batch'
+
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
