--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,11 @@ subprojects {
 	dependencies {
 		// spring
 		implementation 'org.springframework.boot:spring-boot-starter-web'
-		testImplementation 'org.springframework.boot:spring-boot-starter-test'
 		implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+		// test
+		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+		testImplementation 'org.mockito:mockito-core'
 
 		// lombok
 		compileOnly 'org.projectlombok:lombok'
