--- a/jjeob-batch/build.gradle
+++ b/jjeob-batch/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     implementation group: 'org.locationtech.proj4j', name: 'proj4j', version: '1.1.1'
 
     implementation 'org.springframework.boot:spring-boot-starter-batch'
+    implementation 'org.springframework.boot:spring-boot-starter-quartz'
 
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
