--- a/jjeob-api/build.gradle
+++ b/jjeob-api/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.1.8'
     id 'io.spring.dependency-management' version '1.1.4'
+    id 'org.asciidoctor.jvm.convert' version '3.3.2'
 }
 
 group = 'com.fmap'
@@ -15,8 +16,15 @@ dependencies {
     implementation project(path: ':jjeob-core')
     implementation project(path: ':jjeob-batch')
 
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+    implementation("org.springdoc:springdoc-openapi-ui:1.7.0")
+
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+}
+
+allprojects {
+    apply plugin: 'org.asciidoctor.jvm.convert'
 }
 
 test {
