--- a/jjeob-api/build.gradle
+++ b/jjeob-api/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.springframework.boot' version '3.1.8'
     id 'io.spring.dependency-management' version '1.1.4'
     id 'org.asciidoctor.jvm.convert' version '3.3.2'
+    id 'war'
 }
 
 group = 'com.fmap'
@@ -14,7 +15,6 @@ jar {
 
 dependencies {
     implementation project(path: ':jjeob-core')
-    implementation project(path: ':jjeob-batch')
 
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
     implementation("org.springdoc:springdoc-openapi-ui:1.7.0")
