--- a/jjeob-api/build.gradle
+++ b/jjeob-api/build.gradle
@@ -12,12 +12,14 @@ version = '0.0.1-SNAPSHOT'
 jar {
     enabled = false
 }
+bootWar {
+    enabled = true
+    archiveFileName = 'jjeob-api.war' // war 파일명 지정
+}
 
 dependencies {
     implementation project(path: ':jjeob-core')
-
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
-    implementation("org.springdoc:springdoc-openapi-ui:1.7.0")
 
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
