--- a/jjeob-batch/build.gradle
+++ b/jjeob-batch/build.gradle
@@ -6,6 +6,14 @@ plugins {
 group = 'com.fmap'
 version = '0.0.1-SNAPSHOT'
 
+jar {
+    enabled = false
+}
+bootWar {
+    enabled = true
+    archiveFileName = 'jjeob-batch.war' // war 파일명 지정
+}
+
 dependencies {
     implementation project(path: ':jjeob-core')
 
