--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,7 @@ rootProject.name = 'jjeob-jjeob'
 include 'jjeob-batch'
 include 'jjeob-core'
 include 'jjeob-api'
+include 'jjeob-security'
+include 'jjeob-security'
+include 'jjeob-security'
 
