--- a/jjeob-security/build.gradle
+++ b/jjeob-security/build.gradle
@@ -2,61 +2,38 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.1.8'
     id 'io.spring.dependency-management' version '1.1.4'
+    id 'org.asciidoctor.jvm.convert' version '3.3.2'
+    id 'war'
 }
 
-group = 'com.example'
+group = 'com.fmap'
 version = '0.0.1-SNAPSHOT'
 
-java {
-    sourceCompatibility = '17'
+jar {
+    enabled = false
+}
+bootWar {
+    enabled = true
+    archiveFileName = 'jjeob-security.war' // war 파일명 지정
 }
 
-configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
-    }
+dependencies {
+    implementation project(path: ':jjeob-core')
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client', version: '3.2.4'
+
+
+    testImplementation platform('org.junit:junit-bom:5.9.1')
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'junit:junit:4.13.1'
 }
 
-repositories {
-    mavenCentral()
+allprojects {
+    apply plugin: 'org.asciidoctor.jvm.convert'
 }
 
-subprojects {
-    apply plugin: 'java'
-    apply plugin: 'org.springframework.boot'
-    apply plugin: 'io.spring.dependency-management'
-
-    repositories {
-        mavenCentral()
-    }
-
-    dependencies {
-        // spring
-        implementation 'org.springframework.boot:spring-boot-starter-web'
-        implementation 'org.springframework.boot:spring-boot-starter-validation'
-
-        // test
-        testImplementation 'org.springframework.boot:spring-boot-starter-test'
-        testImplementation 'org.mockito:mockito-core'
-
-        // lombok
-        compileOnly 'org.projectlombok:lombok'
-        annotationProcessor 'org.projectlombok:lombok'
-
-        // spring security
-        implementation 'org.springframework.boot:spring-boot-starter-security'
-        implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client', version: '3.2.4'
-
-        // DB
-        runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
-        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    }
-}
-
-tasks.named('bootBuildImage') {
-    builder = 'paketobuildpacks/builder-jammy-base:latest'
-}
-
-tasks.named('test') {
+test {
     useJUnitPlatform()
 }
