--- a/jjeob-security/build.gradle
+++ b/jjeob-security/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.1.8'
     id 'io.spring.dependency-management' version '1.1.4'
-    id 'org.asciidoctor.jvm.convert' version '3.3.2'
     id 'war'
 }
 
@@ -17,21 +16,17 @@ bootWar {
     archiveFileName = 'jjeob-security.war' // war 파일명 지정
 }
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
     implementation project(path: ':jjeob-core')
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
-
-    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation "org.springframework.boot:spring-boot-starter-security"
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client', version: '3.2.4'
-
 
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
-    testImplementation 'junit:junit:4.13.1'
-}
-
-allprojects {
-    apply plugin: 'org.asciidoctor.jvm.convert'
 }
 
 test {
