--- a/jjeob-security/build.gradle
+++ b/jjeob-security/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.1.8'
     id 'io.spring.dependency-management' version '1.1.4'
+    id 'org.asciidoctor.jvm.convert' version '3.3.2'
     id 'war'
 }
 
@@ -22,11 +23,18 @@ repositories {
 
 dependencies {
     implementation project(path: ':jjeob-core')
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+    implementation 'org.springframework.boot:spring-boot-starter-mustache'
+
     implementation "org.springframework.boot:spring-boot-starter-security"
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client', version: '3.2.4'
 
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+}
+
+allprojects {
+    apply plugin: 'org.asciidoctor.jvm.convert'
 }
 
 test {
