--- a/jjeob-api/build.gradle
+++ b/jjeob-api/build.gradle
@@ -21,6 +21,11 @@ dependencies {
     implementation project(path: ':jjeob-core')
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 
+    implementation 'org.springframework.boot:spring-boot-starter-mustache'
+
+    implementation "org.springframework.boot:spring-boot-starter-security"
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client', version: '3.2.4'
+
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'junit:junit:4.13.1'
