--- a/jjeob-api/build.gradle
+++ b/jjeob-api/build.gradle
@@ -1,9 +1,9 @@
 plugins {
     id 'java'
+    id 'war'
     id 'org.springframework.boot' version '3.1.8'
     id 'io.spring.dependency-management' version '1.1.4'
     id 'org.asciidoctor.jvm.convert' version '3.3.2'
-    id 'war'
 }
 
 group = 'com.fmap'
@@ -19,6 +19,7 @@ bootWar {
 
 dependencies {
     implementation project(path: ':jjeob-core')
+    implementation project(path:':jjeob-common')
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 
     implementation 'org.springframework.boot:spring-boot-starter-mustache'
