--- a/jjeob-core/build.gradle
+++ b/jjeob-core/build.gradle
@@ -14,6 +14,7 @@ bootJar {
 }
 
 dependencies {
+    implementation project(path:':jjeob-common')
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
