--- a/jjeob-api/build.gradle
+++ b/jjeob-api/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-security"
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client', version: '3.2.4'
 
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'junit:junit:4.13.1'
