--- a/jjeob-core/build.gradle
+++ b/jjeob-core/build.gradle
@@ -17,6 +17,8 @@ dependencies {
     implementation project(path:':jjeob-common')
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 }
 
 test {
